# eden-validator

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/: CONTRIBUTING.md
src/: validator.cpp
